fixing HTML markup in form.html

--- a/form.html
+++ b/form.html
@@ -22,7 +22,7 @@
                             <br />
             email Address (required):&nbsp; <input type="email" name="email" id="email" class="textinput" value="" />
                             <br />
-            <input type="checkbox" name="trial" checked="checked">Interested in joining the ePACT trial? <input type="submit" id="SendButton" name="submit" class="textinput" value="Submit" />
+            <input type="checkbox" name="trial" checked="checked">Interested in joining the ePACT trial? <input type="submit" id="SendButton" name="SendButton" class="textinput" value="Submit" />
             </form>
         </div>
         <div id="message">
